--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@
 # Gradle
 .idea/**/gradle.xml
 .idea/**/libraries
+gradlew.bat
+gradlew
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
@@ -115,3 +117,5 @@ gradle-app.setting
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+/.idea/
+/gradle/
